2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* gconf-property-editor.c: (peditor_font_value_changed),
	(peditor_font_widget_changed), (gconf_peditor_new_font):
	* gconf-property-editor.h: 
	port of the font capplet to gtk_font_button and some cleanup, 
	patch from paolo borelli <pborelli@katamail.com> (Closes: #160016).

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* theme-thumbnail.c: (create_image): fix the theme preview crasher with
	xorg/composite, patch from Colin Gibbs <colin@gibbsonline.net>
	(Closes: #152490).

2005-02-08  Sebastien Bacher  <seb128@debian.org>

	* gnome-theme-info.c: (update_common_theme_dir_index):
	* theme-thumbnail.c: (create_image):
	patch by Kjartan Maraas <kmaraas@gnome.org>, move to use GtkIconTheme
	and remove a load of leaks in the theme manager code (Closes: #166267).

2005-02-03  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-info.c: (update_theme_index),
	(top_theme_dir_changed), (top_icon_theme_dir_changed),
	(real_add_top_theme_dir_monitor): Revert the previous
	two commits. It looks like the fix in gnome-vfs to make
	sure gnome_vfs_uri_extract_short_name() doesn't return
	NULL was what we really needed. Please retest to see if
	you can still reproduce the crashes in the theme-manager
	after this change and with the latest gnome-vfs from CVS.

2005-02-02  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-info.c: (update_theme_index),
	(real_add_top_theme_dir_monitor): More bandaids for test
	purposes.

2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-info.c: (top_theme_dir_changed),
	(top_icon_theme_dir_changed), (real_add_top_theme_dir_monitor):
	Try to fix bug #149236 by not freeing stuff already being free'd
	by the hash destroy_func. It will leak a bit more, but that can
	be fixed later. Please test this and report success in the report
	mentioned above.

2005-01-02  Thomas Cataldo  <thomas.cataldo@aliacom.fr>

	* gconf-property-editor.c: (gconf_property_editor_finalize): plug