@@ -1,3 +1,10 @@
+2005-03-02  Shakti Sen  <shprasad@novell.com>
+
+	* gnome-theme-info.c (read_icon_theme): Do not add the Icon Theme if
+	the key 'Hidden' is 'true' in the index.theme file.
+
+	Fixes bug #168348
+
 2005-05-22  Sebastien Bacher  <seb128@debian.org>
 
 	* gconf-property-editor.c: (peditor_font_value_changed),
